--- a/practica_git/index.html
+++ b/practica_git/index.html
@@ -9,6 +9,10 @@
     <script src="app.js" defer></script>
   </head>
 
-  <body
+  <body>
+    <h1>Nombre completo</h1>
+    <h2>Click to get new jokes!</h2>
+    <button>Click me!</button>
+    <ul id="jokes"></ul>
   </body>
 </html>
